# strusRpc

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  README  README.md
.Attic/: CMakeLists.txt.ubuntu_libuv
.Attic/include/private/: utils.hpp
.Attic/src/: CMakeLists.txt.ubuntu_libuv  server.c
doc/: doxygen.conf  header.html
doc/doxygen/html/: annotated.html  classes.html  classstrus_1_1RpcClientInterface-members.html  classstrus_1_1RpcClientInterface.html  classstrus_1_1RpcClientMessagingInterface-members.html  classstrus_1_1RpcClientMessagingInterface.html  classstrus_1_1RpcRequestHandlerInterface-members.html  classstrus_1_1RpcRequestHandlerInterface.html  dir_4c7fe52541d540b59710786f705b50e0.html  dir_a73361def35442ed7e38ef668dbae29f.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  index.hhc  index.hhk  index.hhp  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacestrus.html  rpcClientInterface_8hpp.html  rpcClientInterface_8hpp_source.html  rpcClientMessagingInterface_8hpp.html  rpcClientMessagingInterface_8hpp_source.html  rpcRequestHandlerInterface_8hpp.html  rpcRequestHandlerInterface_8hpp_source.html  rpc__client_8hpp.html  rpc__client_8hpp_source.html  rpc__client__socket_8hpp.html  rpc__client__socket_8hpp_source.html  rpc__server_8hpp.html  rpc__server_8hpp_source.html  strus_8md.html  versionRpc_8hpp.html  versionRpc_8hpp_source.html
doc/doxygen_include/: strus.md
include/private/: errorUtils.hpp  utils.hpp
include/strus/: rpcClientInterface.hpp  rpcClientMessagingInterface.hpp  rpcInterfaceStub.hpp  rpcMessagingInterface.hpp  rpcObjects.hpp  rpcRequestHandlerInterface.hpp  versionRpc.hpp  versionRpc.hpp.in
include/strus/lib/: rpc.hpp  rpc_client.hpp  rpc_client_nanomsg.hpp  rpc_client_socket.hpp  rpc_nanomsg.hpp  rpc_server.hpp
scripts/: genInterface.pl  genInterface.sh
src/: CMakeLists.txt  client.c  client.h  clientContext.cpp  clientContext.hpp  constConstructor.hpp  hexdump.c  hexdump.h  interfaceStub.cpp  interfaceStub.hpp  internationalization.cpp.in  libstrus_rpc.cpp  libstrus_rpc_client.cpp  libstrus_rpc_client_nanomsg.cpp  libstrus_rpc_client_socket.cpp  libstrus_rpc_nanomsg.cpp  libstrus_rpc_server.cpp  loadGlobalStatistics.cpp  loadGlobalStatistics.hpp  objectIds_gen.hpp  objects_gen.cpp  objects_gen.hpp  rpcClient.cpp  rpcClient.hpp  rpcClientContext.cpp  rpcClientContext.hpp  rpcClientMessaging.cpp  rpcClientMessaging.hpp  rpcInterfaceStub.cpp  rpcInterfaceStub.hpp  rpcMessage.cpp  rpcMessage.hpp  rpcObjects.cpp  rpcObjects.hpp  rpcProtocolDefines.hpp  rpcProtocolDefines.hpp.in  rpcRemoteEndPoint.cpp  rpcRemoteEndPoint.hpp  rpcRequestHandler.cpp  rpcRequestHandler.hpp  (+12 more)
src/client/: rpcClientMessaging.cpp  rpcClientMessaging.hpp
src/serialize/: rpcClient.cpp  rpcClient.hpp  rpcInterfaceStub.cpp  rpcInterfaceStub.hpp  rpcObjectIds.hpp  rpcObjects.cpp  rpcObjects.hpp  rpcRequestHandler.cpp  rpcRequestHandler.hpp  rpcSerializer.cpp  rpcSerializer.hpp
src/server/: strusRpcServer.cpp
